--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
               <tr>
                 <td>Problem Set 1-2</td>
                 <td><a href="">Screenshot</a></td>
-                <td><a href="placeholder.html">Assignment Link</a></td>
+                <td><a href="https://amishr.sgedu.site/pset1-2/about.html">Assignment Link</a></td>
               </tr>
           
               <tr>
